Adding all files